--- a/Resources/Private/Language/de.locallang_be.xlf
+++ b/Resources/Private/Language/de.locallang_be.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-	<file source-language="en" target-language="de" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2022-05-30T15:02:11Z" product-name="fp_newsletter">
+	<file source-language="en" target-language="de" datatype="plaintext" original="EXT:fp_newsletter/Resources/Private/Language/locallang_be.xlf" date="2022-07-12T09:29:33Z" product-name="fp_newsletter">
 		<header/>
 		<body>
 			<trans-unit id="title" resname="title">
@@ -159,6 +159,10 @@
 				<source>Subscribe to a HTML-newsletter?</source>
 				<target>Newsletter im HTML-Format abonnieren?</target>
 			</trans-unit>
+			<trans-unit id="settings.module_sys_dmail_category" resname="settings.module_sys_dmail_category">
+				<source>UIDs of the direct-mail-categories (direct-mail) OR fe_groups (luxletter)</source>
+				<target>UIDs von direct-mail-Kategorien (direct-mail) oder fe_groups (luxletter), Z.B. 3,4</target>
+			</trans-unit>
 			<trans-unit id="parameters" resname="parameters">
 				<source>External parameters</source>
 				<target>Externe Parameter</target>
@@ -184,7 +188,7 @@
 				<target>fp_newsletter: Status-Diagramm</target>
 			</trans-unit>
 			<trans-unit id="dashboard.widget.fixpunktLogStatus.description" resname="dashboard.widget.fixpunktLogStatus.description">
-				<source>Shows how often a status is in use</source>
+				<source>Shows how often a status occurs</source>
 				<target>Zeigt, wie oft ein Status vorkommt</target>
 			</trans-unit>
 			<trans-unit id="dashboard.widget.fixpunktLogStatus.label" resname="dashboard.widget.fixpunktLogStatus.label">
