--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -32,12 +32,12 @@
 				<target>Veuillez sélectionner</target>
 			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.mr" resname="tx_fpnewsletter_domain_model_log.gender.mr">
-				<source>M.</source>
-				<target>Herr</target>
+				<source>Mr.</source>
+				<target>M.</target>
 			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.mrs" resname="tx_fpnewsletter_domain_model_log.gender.mrs">
-				<source>Mme</source>
-				<target>Frau</target>
+				<source>Mrs.</source>
+				<target>Mme</target>
 			</trans-unit>
 			<trans-unit id="tx_fpnewsletter_domain_model_log.gender.divers" resname="tx_fpnewsletter_domain_model_log.gender.divers">
 				<source>Divers</source>
