--- a/Resources/Private/Language/de.locallang_be.xlf
+++ b/Resources/Private/Language/de.locallang_be.xlf
@@ -23,6 +23,10 @@
 				<source>Newsletter: subscribe (and unsubscribe)</source>
 				<target>Newsletter: Anmeldung (und Abmeldung)</target>
 			</trans-unit>
+			<trans-unit id="template.form" resname="template.form">
+				<source>Newsletter: only a cacheable subscribe form</source>
+				<target>Newsletter: nur ein cachebares Anmelde-Formular</target>
+			</trans-unit>
 			<trans-unit id="template.subscribeExtern" resname="template.subscribeExtern">
 				<source>Newsletter: subscribe via external extension</source>
 				<target>Newsletter: Anmeldung über externe Extension</target>
@@ -36,8 +40,12 @@
 				<target>Newsletter: Abmeldung via Formular</target>
 			</trans-unit>
 			<trans-unit id="template.unsubscribeDM" resname="template.unsubscribeDM">
-				<source>Newsletter: unsubscribe via link</source>
-				<target>Newsletter: Abmeldung via Link</target>
+				<source>Newsletter: unsubscribe via direct_mail-link</source>
+				<target>Newsletter: Abmeldung via direct_mail-Link</target>
+			</trans-unit>
+			<trans-unit id="template.unsubscribeLux" resname="template.unsubscribeLux">
+				<source>Newsletter: unsubscribe via Luxletter-link</source>
+				<target>Newsletter: Abmeldung via Luxletter-Link</target>
 			</trans-unit>
 			<trans-unit id="template.unsubscribeVerify" resname="template.unsubscribeVerify">
 				<source>Newsletter: verify unsubscription</source>
